--- a/arch/arm64/configs/sagit_defconfig
+++ b/arch/arm64/configs/sagit_defconfig
@@ -710,3 +710,29 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
+
+# zhaoyuenan add: enable kernel su
+CONFIG_KPROBES=y
+CONFIG_OVERLAY_FS=y
+CONFIG_KSU=y
+# CONFIG_KSU_DEBUG is not set
+CONFIG_KSU_BACKPORT=y
+# zhaoyuenan end: enable kernel su
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
