gitignore: Add kernel out directory and build script to ignore list
Change-Id: I0f5e563c654bee2b56eeb3480e3c8bb17034ccf7

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,11 @@ android/configs/android-*.cfg
 # Clang's compilation database file
 /compile_commands.json
 
+# kernel extra files
+out
+paper
+kbuild.sh
+
 #
 #Ignoring Android.bp link file
 #
