[PAPER] 添加内核定义区分更改特性和原有内核的改动
Add: CONFIG_PAPER_XIAOMI_KERNEL_MERGE=y into platfrom_defconfig

Change-Id: I19c3f563b853796027cfe75d603d4f9656449e25
(cherry picked from commit fef196fd90be3c5d6641d4f4b6af544bb8171036)

--- a/drivers/platform/xiaomi/Kconfig
+++ b/drivers/platform/xiaomi/Kconfig
@@ -13,6 +13,12 @@ config MACH_XIAOMI_MSM8998
 	help
 	 Support for MSM8998 Xiaomi boards.
 
+config PAPER_XIAOMI_KERNEL_MERGE
+	bool "Define paper xiaomi kernel"
+	depends on MACH_XIAOMI_MSM8998
+	help
+	 Define paper xiaomi device kernel.
+
 menu "Xiaomi board selection"
 
 config MACH_SAGIT
