[DEBUG] qpnp-power-on: Press the power button to force a kernel panic
* This submission is only for debug use, such as GSI ROM,
  we may get some useful logs generated at startup.

* This patch change needs to be merged and submitted for use
  similar to "forced hot restart", because RAM cannot save data
  after power failure, so it is necessary to force hot restart
  to make RAM restart to REC(TWRP) to obtain logs.

* If the GSI ROM is stuck on the first boot screen (LOGO), press
  and hold the power button to force restart until rec can not get
  any logs, this commit changes the purpose, if stuck on the first
  boot screen (LOGO), press the power button to trigger the
  kernel panic completes the hot restart and leaves dmesg logs,
  try to get some useful help, such as init, selinux and other reasons

Change-Id: I1f153c9c5e5ac7f032ce21001ef93d8dfb15615e

--- a/drivers/power/reset/Kconfig
+++ b/drivers/power/reset/Kconfig
@@ -112,6 +112,12 @@ config QCOM_PRESERVE_MEM
 	  persistent memory contents. Select this option to always perform
 	  a soft reset that preserves memory contents.
 
+config PAPER_ON_POWERKEY_TWI_PANIC
+	bool "Debug export init log to pstore"
+	depends on PAPER_XIAOMI_KERNEL_MERGE
+	help
+	  If you encounter card 1 and need init log, please open it.
+
 config POWER_RESET_QNAP
 	bool "QNAP power-off driver"
 	depends on OF_GPIO && PLAT_ORION
