[CONFIG] 主配置: 切换至exfat 2023-04-20 234022 add 835-kernel
Change-Id: If6a1174a90c61ecd4258196287c1fe87c3ea2fda

--- a/arch/arm64/configs/paper.config
+++ b/arch/arm64/configs/paper.config
@@ -8,3 +8,8 @@ CONFIG_VM_MAX_READAHEAD=512
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 # CONFIG_MEMORY_STATE_TIME is not set
 # CONFIG_CC_WERROR is not set
+
+#添加 sdfat切换 exfat
+# CONFIG_SDFAT_FS is not set
+CONFIG_EXFAT_FS=y
+#结尾 sdfat切换 exfat
