[PAPER] 通用部分: 为小米MSM8998内核目标禁用强制热重启
- 修复重启后电池温度虚高导致无法充电且电流显示不正常的问题
  (例如装模块从系统触发重启而不是关机再开机)

- 补丁合并 paper_kernel patch 472

(cherry picked from commit 06add48dc552e5223a301c4074a4e57c81ec15e1)
Change-Id: Ic803d01184337475c1b9baca131e73211de7c4ee
Signed-off-by: admin <paper@localhost>

--- a/arch/arm64/configs/mod_other_k.config
+++ b/arch/arm64/configs/mod_other_k.config
@@ -4,3 +4,9 @@ CONFIG_HZ_100=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_SCSI_CONSTANTS is not set
 CONFIG_VM_MAX_READAHEAD=512
+
+#add 禁用强制热重启
+# 修复重启后电池温度虚高导致无法充电且电流显示不正常的问题
+# xm-msm8998 kernel commit: b6106d34 (revert)
+# CONFIG_QCOM_PRESERVE_MEM is not set
+#end
