--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -214,6 +214,8 @@ source "drivers/sensors/Kconfig"
 
 source "drivers/tee/Kconfig"
 
+source "drivers/paper/Kconfig"
+
 source "drivers/kernelsu/Kconfig"
 
 endmenu
